--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,21 +8,16 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
   </head>
 
   <body>
     <div class="container">
-        <ul class="nav nav-tabs">
-          <% if session['procore_token'] %>
-            <li><%= link_to "Home", users_home_path %></li>
-            <li><%= link_to "Me", users_me_path %></li>
-            <li><%= link_to "Sign Out", login_revoke_path %></li>
-          <% else %>
-            <li><%= link_to "Sign In", login_index_path %></li>
-          <% end %>
-        </ul>
+      <%= render "layouts/nav_bar" %>
+      <%= render "layouts/flash_message" %>
 
       <%= yield %>
     </div>
+    
   </body>
 </html>
