--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -33,12 +33,17 @@
 <%= form_with(url: '/users/home', method: 'get', local: true) do %>
   <div class="form-group">
     <label for="path">Path:</label>
-    <input id="path" type="text" name="path" placeholder="/rest/v1.0/me"></input>
+    <input id="path" type="text" name="path" placeholder="companies/id">
+  </div>
+
+  <div class="form-group">
+    <label for="version">Version:</label>
+    <input id="version" type="text" name="version" placeholder="v1.0">
   </div>
 
   <div class="form-group">
     <label for="body">Body:</label>
-    <input id="body" type="textarea" name="body" placeholder="{}"></input>
+    <input id="body" type="textarea" name="body" placeholder="{}">
   </div>
 
   <div class="form-group">
@@ -46,10 +51,12 @@
     <select id="method" type="text" name="method">
       <option value="get">GET</option>
       <option value="post">POST</option>
+      <option value="patch">PATCH</option>
+      <option value="delete">DELETE</option>
     </select>
   </div>
 
-  <input type="submit" class="btn btn-primary"></input>
+  <input type="submit" class="btn btn-primary">
 <% end %>
 
 <br/>
