Use textarea element for body

--- a/app/views/users/home.html.erb
+++ b/app/views/users/home.html.erb
@@ -43,7 +43,9 @@
 
   <div class="form-group">
     <label for="body">Body:</label>
-    <input id="body" type="textarea" name="body" placeholder="{}">
+    <div class="input-group">
+      <textarea id="body" name="body" placeholder="{}"></textarea>
+    </div>
   </div>
 
   <div class="form-group">
